@@ -15,6 +15,9 @@ Enhancements::
 * Support for trial versions of Windows 7 Enterprise x86 and x64
 * debug: Passes -on-error=abort to packer to allow investigation of failures (#35)
 * Better out of the box support of Fedora, CentOS and RedHat as host (#53)
+* Use user cache directories for packer. This avoids caching in memory-backed locations to
+  prevent unnecessary memory pressure during builds or free space issues on
+  low RAM systems (#45)
 * Documentation improvements
 
 Bug fixes::
